DDF-3261 Updating pipeline to support multi-branch jobs (#2281)
* DDF-3261 Updating pipeline to support multi-branch jobs
  * Updated maven memory options
  * Added property to override random device on linux
  * Made deploy step conditional
  * Made coverity step conditional
  * Made Incremental vs Full build conditional
  * Set git longpath support on windows

* DDF-3261 skip coverity except on master

* DDF-3261 share common maven options

* DDF-3261 added quickbuild as first step of incremental stage

* DDF-3261 added stage for pomfix

* DDF-3261 added withMaven to pomfix stage

* DDF-3261 Added git longpath configuration to windows full build